<resources>
    <string name="app_name">GhibliMagic</string>
    <string name="username">Marcellino Candyawan</string>
    <string name="email">marcellinocandyawan@gmail.com</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="director">Director</string>
    <string name="producer">Producer</string>

    <string-array name="data_time">
        <item>124</item>
        <item>89</item>
        <item>86</item>
        <item>102</item>
        <item>118</item>
        <item>93</item>
        <item>119</item>
        <item>111</item>
        <item>134</item>
        <item>124</item>
    </string-array>

    <string-array name="data_score">
        <item>95</item>
        <item>97</item>
        <item>93</item>
        <item>96</item>
        <item>100</item>
        <item>94</item>
        <item>78</item>
        <item>91</item>
        <item>92</item>
        <item>97</item>
    </string-array>

    <string-array name="data_name">
        <item>Castle in the Sky</item>
        <item>Grave of the Fireflies</item>
        <item>My Neighbor Totoro</item>
        <item>Kiki\'s Delivery Service</item>
        <item>Only Yesterday</item>
        <item>Porco Rosso</item>
        <item>Pom Poko</item>
        <item>Whisper of the Heart</item>
        <item>Princess Mononoke</item>
        <item>Spirited Away</item>
    </string-array>

    <string-array name="data_description">
        <item>The orphan Sheeta inherited a mysterious crystal that links her to the mythical sky-kingdom of Laputa. With the help of resourceful Pazu and a rollicking band of sky pirates, she makes her way to the ruins of the once-great civilization. Sheeta and Pazu must outwit the evil Muska, who plans to use Laputa\'s science to make himself ruler of the world.</item>
        <item>In the latter part of World War II, a boy and his sister, orphaned when their mother is killed in the firebombing of Tokyo, are left to survive on their own in what remains of civilian life in Japan. The plot follows this boy and his sister as they do their best to survive in the Japanese countryside, battling hunger, prejudice, and pride in their own quiet, personal battle.</item>
        <item>Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by Totoros, magical spirits of the forest. When the youngest runs away from home, the older sister seeks help from the spirits to find her.</item>
        <item>A young witch, on her mandatory year of independent life, finds fitting into a new community difficult while she supports herself by running an air courier service.</item>
        <item>It’s 1982, and Taeko is 27 years old, unmarried, and has lived her whole life in Tokyo. She decides to visit her family in the countryside, and as the train travels through the night, memories flood back of her younger years: the first immature stirrings of romance, the onset of puberty, and the frustrations of math and boys. At the station she is met by young farmer Toshio, and the encounters with him begin to reconnect her to forgotten longings. In lyrical switches between the present and the past, Taeko contemplates the arc of her life, and wonders if she has been true to the dreams of her childhood self.</item>
        <item>Porco Rosso, known in Japan as Crimson Pig (Kurenai no Buta) is the sixth animated film by Hayao Miyazaki and released in 1992. You\'re introduced to an Italian World War I fighter ace, now living as a freelance bounty hunter chasing \'air pirates\' in the Adriatic Sea. He has been given a curse that changed his head to that of a pig. Once called Marco Pagot, he is now known to the world as \'Porco Rosso\', Italian for \'Red Pig.\'</item>
        <item>As the human city development encroaches on the raccoon population\'s forest and meadow habitat, the raccoons find themselves faced with the very real possibility of extinction. In response, the raccoons engage in a desperate struggle to stop the construction and preserve their home.</item>
        <item>Shizuku lives a simple life, dominated by her love for stories and writing. One day she notices that all the library books she has have been previously checked out by the same person: \'Seiji Amasawa\'. Curious as to who he is, Shizuku meets a boy her age whom she finds infuriating, but discovers to her shock that he is her \'Prince of Books\'. As she grows closer to him, she realises that he merely read all those books to bring himself closer to her. The boy Seiji aspires to be a violin maker in Italy, and it is his dreams that make Shizuku realise that she has no clear path for her life. Knowing that her strength lies in writing, she tests her talents by writing a story about Baron, a cat statuette belonging to Seiji\'s grandfather.</item>
        <item>Ashitaka, a prince of the disappearing Ainu tribe, is cursed by a demonized boar god and must journey to the west to find a cure. Along the way, he encounters San, a young human woman fighting to protect the forest, and Lady Eboshi, who is trying to destroy it. Ashitaka must find a way to bring balance to this conflict.</item>
        <item>Spirited Away is an Oscar winning Japanese animated film about a ten year old girl who wanders away from her parents along a path that leads to a world ruled by strange and unusual monster-like animals. Her parents have been changed into pigs along with others inside a bathhouse full of these creatures. Will she ever see the world how it once was?</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/castle_in_the_sky</item>
        <item>@drawable/grave_of_the_fireflies</item>
        <item>@drawable/my_neighbor_tororo</item>
        <item>@drawable/kiki_delivery_service</item>
        <item>@drawable/only_yesterday</item>
        <item>@drawable/porco_rosso</item>
        <item>@drawable/pompoko</item>
        <item>@drawable/whisper_of_the_heart</item>
        <item>@drawable/princess_mononoke</item>
        <item>@drawable/spirited_away</item>
    </integer-array>

    <string-array name="data_year">
        <item>1986</item>
        <item>1988</item>
        <item>1988</item>
        <item>1989</item>
        <item>1991</item>
        <item>1992</item>
        <item>1994</item>
        <item>1995</item>
        <item>1997</item>
        <item>2001</item>
    </string-array>

    <string-array name="data_wiki">
        <item>https://en.wikipedia.org/wiki/Castle_in_the_Sky</item>
        <item>https://en.wikipedia.org/wiki/Grave_of_the_Fireflies</item>
        <item>https://en.wikipedia.org/wiki/My_Neighbor_Totoro</item>
        <item>https://en.wikipedia.org/wiki/Kiki%27s_Delivery_Service</item>
        <item>https://en.wikipedia.org/wiki/Only_Yesterday_(1991_film)</item>
        <item>https://en.wikipedia.org/wiki/Porco_Rosso</item>
        <item>https://id.wikipedia.org/wiki/Pom_Poko</item>
        <item>https://en.wikipedia.org/wiki/Whisper_of_the_Heart</item>
        <item>https://en.wikipedia.org/wiki/Princess_Mononoke</item>
        <item>https://en.wikipedia.org/wiki/Spirited_Away</item>
    </string-array>

    <string-array name="data_director">
        <item>Hayao Miyazaki</item>
        <item>Isao Takahata</item>
        <item>Hayao Mizaki</item>
        <item>Hayao Mizaki</item>
        <item>Isao Takahata</item>
        <item>Hayao Mizaki</item>
        <item>Isao Takahata</item>
        <item>Yoshifumi Kondo</item>
        <item>Hayao Miyazaki</item>
        <item>Hayao Miyazaki</item>
    </string-array>

    <string-array name="data_producer">
        <item>Isao Takahata</item>
        <item>Toru Hara</item>
        <item>Hayao Mizaki</item>
        <item>Hayao Mizaki</item>
        <item>Toshio Suzuki</item>
        <item>Toshio Suzuki</item>
        <item>Toshio Suzuki</item>
        <item>Toshio Suzuki</item>
        <item>Toshio Suzuki</item>
        <item>Toshio Suzuki</item>
    </string-array>
</resources>